-- Legacy Schema - PostgreSQL DDL
-- Converted from Oracle schema definition
-- Generated on: 2025-10-31 20:46:25

-- Drop existing tables (optional)
-- DROP SCHEMA IF EXISTS schema_name CASCADE;
-- CREATE SCHEMA schema_name;

CREATE TABLE IF NOT EXISTS ACTIVE_ID (
    TAGNAME VARCHAR(8),
    TAGID BIGINT,
    CLIENT_INFO VARCHAR(64),
    AUTHOR VARCHAR(64),
    MODDATE TIMESTAMP,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS AMPLITUDE (
    AMPID BIGINT,
    ARID BIGINT,
    PARID BIGINT,
    CHAN VARCHAR(8),
    AMP REAL,
    PER REAL,
    SNR REAL,
    AMPTIME DOUBLE PRECISION,
    TIME DOUBLE PRECISION,
    DURATION REAL,
    DELTAF REAL,
    AMPTYPE VARCHAR(8),
    UNITS VARCHAR(15),
    CLIP VARCHAR(1),
    INARRIVAL VARCHAR(1),
    AUTH VARCHAR(15),
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS AMPLITUDE_DYN_PARS_INT (
    AMPID BIGINT,
    GROUP_NAME VARCHAR(48),
    PARAM_NAME VARCHAR(48),
    I_VALUE BIGINT,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS ARRIVAL (
    STA VARCHAR(6),
    TIME DOUBLE PRECISION,
    ARID BIGINT,
    JDATE INTEGER,
    STASSID BIGINT,
    CHANID BIGINT,
    CHAN VARCHAR(8),
    IPHASE VARCHAR(8),
    STYPE VARCHAR(1),
    DELTIM REAL,
    AZIMUTH REAL,
    DELAZ REAL,
    SLOW REAL,
    DELSLO REAL,
    EMA REAL,
    RECT REAL,
    AMP REAL,
    PER REAL,
    LOGAT REAL,
    CLIP VARCHAR(1),
    FM VARCHAR(2),
    SNR REAL,
    QUAL VARCHAR(1),
    AUTH VARCHAR(15),
    COMMID BIGINT,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS ARRIVAL_DYN_PARS_INT (
    ARID BIGINT,
    GROUP_NAME VARCHAR(48),
    PARAM_NAME VARCHAR(48),
    I_VALUE BIGINT,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS AR_INFO (
    ORID BIGINT,
    ARID BIGINT,
    TIME_ERROR_CODE INTEGER,
    AZ_ERROR_CODE INTEGER,
    SLOW_ERROR_CODE INTEGER,
    SRC_DPNT_CORR_TYPE INTEGER,
    VMODEL VARCHAR(16),
    TOTAL_TRAVEL_TIME REAL,
    TT_TABLE_VALUE REAL,
    ELLIP_CORR REAL,
    ELEV_CORR REAL,
    BULK_STATIC_STA_CORR REAL,
    TT_SRC_DPNT_CORR REAL,
    TT_MODEL_ERROR REAL,
    TT_MEAS_ERROR REAL,
    TT_MODEL_PLUS_MEAS_ERROR REAL,
    AZ_SRC_DPNT_CORR REAL,
    AZ_MODEL_ERROR REAL,
    AZ_MEAS_ERROR REAL,
    AZ_MODEL_PLUS_MEAS_ERROR REAL,
    SL_SRC_DPNT_CORR REAL,
    SL_MODEL_ERROR REAL,
    SL_MEAS_ERROR REAL,
    SL_MODEL_PLUS_MEAS_ERROR REAL,
    TIME_IMPORT REAL,
    AZ_IMPORT REAL,
    SLOW_IMPORT REAL,
    SLOW_VEC_RES REAL,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS ASSOC (
    ARID BIGINT,
    ORID BIGINT,
    STA VARCHAR(6),
    PHASE VARCHAR(8),
    BELIEF REAL,
    DELTA REAL,
    SEAZ REAL,
    ESAZ REAL,
    TIMERES REAL,
    TIMEDEF VARCHAR(1),
    AZRES REAL,
    AZDEF VARCHAR(1),
    SLORES REAL,
    SLODEF VARCHAR(1),
    EMARES REAL,
    WGT REAL,
    VMODEL VARCHAR(15),
    COMMID BIGINT,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS EVENT (
    EVID BIGINT,
    EVNAME VARCHAR(32),
    PREFOR BIGINT,
    AUTH VARCHAR(15),
    COMMID BIGINT,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS EVENT_CONTROL (
    ORID BIGINT,
    EVID BIGINT,
    PREFER_LOC VARCHAR(1),
    CONSTRAIN_OT SMALLINT,
    CONSTRAIN_LATLON SMALLINT,
    CONSTRAIN_DEPTH SMALLINT,
    SRC_DPNT_CORR SMALLINT,
    LOC_SRC_DPNT_REG VARCHAR(15),
    LOC_SDV_SCREEN SMALLINT,
    LOC_SDV_MULT REAL,
    LOC_ALPHA_ONLY SMALLINT,
    LOC_ALL_STAS SMALLINT,
    LOC_DIST_VARWGT SMALLINT,
    LOC_USER_VARWGT REAL,
    MAG_SRC_DPNT_REG VARCHAR(15),
    MAG_SDV_SCREEN SMALLINT,
    MAG_SDV_MULT REAL,
    MAG_ALPHA_ONLY SMALLINT,
    MAG_ALL_STAS SMALLINT,
    MB_MIN_DIST REAL,
    MB_MAX_DIST REAL,
    MMODEL VARCHAR(15),
    COV_SM_AXES REAL,
    COV_DEPTH_TIME REAL,
    OBS_CORR_METHOD SMALLINT,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS EVENT_CORRELATION (
    CORR_ID BIGINT,
    SOURCE_ORID BIGINT,
    SOURCE_EVID BIGINT,
    SOURCE_STARTTIME DOUBLE PRECISION,
    SOURCE_SECS DOUBLE PRECISION,
    REFERENCE_ORID BIGINT,
    REFERENCE_EVID BIGINT,
    REFERENCE_STARTTIME DOUBLE PRECISION,
    REFERENCE_SECS DOUBLE PRECISION,
    STA VARCHAR(6),
    FILTER_STRING VARCHAR(2000),
    NUM_CHAN INTEGER,
    CHAN_LIST VARCHAR(2000),
    CORR_COEF DOUBLE PRECISION,
    CORR_TIME DOUBLE PRECISION,
    SCAN_TYPE VARCHAR(32),
    AUTHOR VARCHAR(64),
    MODDATE TIMESTAMP,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS NETMAG (
    MAGID BIGINT,
    NET VARCHAR(8),
    ORID BIGINT,
    EVID BIGINT,
    MAGTYPE VARCHAR(6),
    NSTA INTEGER,
    MAGNITUDE REAL,
    UNCERTAINTY REAL,
    AUTH VARCHAR(15),
    COMMID BIGINT,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS ORIGERR (
    ORID BIGINT,
    SXX REAL,
    SYY REAL,
    SZZ REAL,
    STT REAL,
    SXY REAL,
    SXZ REAL,
    SYZ REAL,
    STX REAL,
    STY REAL,
    STZ REAL,
    SDOBS REAL,
    SMAJAX REAL,
    SMINAX REAL,
    STRIKE REAL,
    SDEPTH REAL,
    STIME REAL,
    CONF REAL,
    COMMID BIGINT,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS ORIGIN (
    LAT REAL,
    LON REAL,
    DEPTH REAL,
    TIME DOUBLE PRECISION,
    ORID BIGINT,
    EVID BIGINT,
    JDATE INTEGER,
    NASS SMALLINT,
    NDEF SMALLINT,
    NDP SMALLINT,
    GRN INTEGER,
    SRN INTEGER,
    ETYPE VARCHAR(7),
    DEPDP REAL,
    DTYPE VARCHAR(1),
    MB REAL,
    MBID BIGINT,
    MS REAL,
    MSID BIGINT,
    ML REAL,
    MLID BIGINT,
    ALGORITHM VARCHAR(15),
    AUTH VARCHAR(15),
    COMMID BIGINT,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS QCMASKINFO (
    QCMASKID BIGINT,
    STA VARCHAR(6),
    CHAN VARCHAR(8),
    TIME DOUBLE PRECISION,
    ENDTIME DOUBLE PRECISION,
    SAMPRATE REAL,
    NSEG INTEGER,
    QCDEFID BIGINT,
    AUTH VARCHAR(15),
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS REMARK (
    COMMID BIGINT,
    LINENO INTEGER,
    REMARK VARCHAR(160),
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS STAMAG (
    MAGID BIGINT,
    AMPID BIGINT,
    STA VARCHAR(6),
    ARID BIGINT,
    ORID BIGINT,
    EVID BIGINT,
    PHASE VARCHAR(8),
    DELTA REAL,
    MAGTYPE VARCHAR(6),
    MAGNITUDE REAL,
    UNCERTAINTY REAL,
    MAGRES REAL,
    MAGDEF VARCHAR(1),
    MMODEL VARCHAR(15),
    AUTH VARCHAR(15),
    COMMID BIGINT,
    LDDATE TIMESTAMP
);

CREATE TABLE IF NOT EXISTS WFTAG (
    TAGNAME VARCHAR(8),
    TAGID BIGINT,
    WFID BIGINT,
    LDDATE TIMESTAMP
);
