-- NDC PLUS Schema - PostgreSQL DDL
-- Converted from Oracle schema definition
-- Generated on: 2025-10-31 20:46:25

-- Drop existing tables (optional)
-- DROP SCHEMA IF EXISTS schema_name CASCADE;
-- CREATE SCHEMA schema_name;

CREATE TABLE IF NOT EXISTS CHANNEL_SEGMENT (
    UUID UUID,
    CHANNEL_SEGMENT_CREATION_UUID UUID,
    REFERENCE_ID UUID,
    CREATION_TIME TIMESTAMP(6),
    CHAN_CANONICAL_NAME VARCHAR(32),
    CHAN_EFFECTIVE_AT TIMESTAMP(6),
    TIME_SERIES_TYPE VARCHAR(32),
    START_TIME TIMESTAMP(6),
    END_TIME TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS CHANNEL_SEGMENT_CREATION (
    UUID UUID,
    OBJECT TEXT,
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS CHANNEL_SEGMENT_PROC_MASK_XREF (
    UUID UUID,
    CHANNEL_SEGMENT_UUID UUID,
    PROCESSING_MASK_UUID UUID,
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS CHANNEL_SEGMENT_WAVEFORM (
    UUID UUID,
    CHANNEL_SEGMENT_UUID UUID,
    WFID BIGINT,
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS EVENT (
    UUID UUID,
    REMARK_GID UUID,
    MONITORING_ORGANIZATION VARCHAR(32),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS EVENT_CORRELATION (
    UUID UUID,
    SOURCE_EVENT_HYPOTHESIS_UUID UUID,
    SIMILAR_EVENT_HYPOTHESIS_UUID UUID,
    SOURCE_EVENT_CHANNEL_SEGMENT_GID UUID,
    SIMILAR_EVENT_CHANNEL_SEGMENT_GID UUID,
    STA_NAME VARCHAR(6),
    STA_EFFECTIVE_AT TIMESTAMP(6),
    CHAN_LIST VARCHAR(2000),
    FILTERID BIGINT,
    SCAN_TYPE VARCHAR(32),
    SCAN_STAGES VARCHAR(32),
    CORRELATION_COEFFICIENT REAL,
    AUTHOR VARCHAR(32),
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS EVENT_CORRELATION_CHANNEL_SEGMENT (
    UUID UUID,
    CHANNEL_SEGMENT_GID UUID,
    CHAN_CANONICAL_NAME VARCHAR(32),
    CHAN_EFFECTIVE_AT TIMESTAMP(6),
    TIME_SERIES_TYPE VARCHAR(32),
    START_TIME TIMESTAMP(6),
    END_TIME TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS EVENT_HYPOTHESIS (
    UUID UUID,
    EVENT_UUID UUID,
    PREFERRED_LOCATION_SOLUTION_UUID UUID,
    REMARK_GID UUID,
    DELETED VARCHAR(1),
    REJECTED VARCHAR(1),
    PREFERRED_BY VARCHAR(32),
    AUTHOR VARCHAR(32),
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS EVENT_HYPOTHESIS_TAG (
    UUID UUID,
    EVENT_HYPOTHESIS_UUID UUID,
    TAG VARCHAR(32),
    AUTHOR VARCHAR(32),
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS EVENT_STATUS_INFO (
    UUID UUID,
    EVENT_UUID UUID,
    EVENT_STATUS VARCHAR(16),
    ACTIVE_ANALYST_IDS VARCHAR(256),
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS FEATURE_MEASUREMENT_AMPLITUDE (
    UUID UUID,
    SIG_DET_HYPO_GID UUID,
    MEASURED_CHANNEL_SEGMENT_UUID UUID,
    ANALYSIS_CHANNEL_SEGMENT_UUID UUID,
    FILTERID BIGINT,
    FILTER_USAGE VARCHAR(32),
    CHAN_CANONICAL_NAME VARCHAR(32),
    CHAN_EFFECTIVE_AT TIMESTAMP(6),
    MEASUREMENT_TYPE VARCHAR(20),
    AMPLITUDE REAL,
    PERIOD REAL,
    UNITS VARCHAR(32),
    CLIPPED VARCHAR(1),
    MEASUREMENT_WINDOW_START_TIME TIMESTAMP(6),
    MEASUREMENT_WINDOW_DURATION REAL,
    MEASUREMENT_TIME TIMESTAMP(6),
    SNR REAL,
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS FEATURE_MEASUREMENT_ARRIVAL_TIME (
    UUID UUID,
    SIG_DET_HYPO_GID UUID,
    MEASURED_CHANNEL_SEGMENT_UUID UUID,
    ANALYSIS_CHANNEL_SEGMENT_UUID UUID,
    FILTERID BIGINT,
    FILTER_USAGE VARCHAR(32),
    CHAN_CANONICAL_NAME VARCHAR(32),
    CHAN_EFFECTIVE_AT TIMESTAMP(6),
    MEASUREMENT_TYPE VARCHAR(27),
    ARRIVAL_TIME TIMESTAMP(6),
    STANDARD_DEVIATION REAL,
    SNR REAL,
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS FEATURE_MEASUREMENT_ENUMERATED (
    UUID UUID,
    SIG_DET_HYPO_GID UUID,
    MEASURED_CHANNEL_SEGMENT_UUID UUID,
    ANALYSIS_CHANNEL_SEGMENT_UUID UUID,
    FILTERID BIGINT,
    FILTER_USAGE VARCHAR(32),
    CHAN_CANONICAL_NAME VARCHAR(32),
    CHAN_EFFECTIVE_AT TIMESTAMP(6),
    MEASUREMENT_TYPE VARCHAR(20),
    MEASURED_VALUE VARCHAR(13),
    CONFIDENCE REAL,
    REFERENCE_TIME TIMESTAMP(6),
    SNR REAL,
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS FEATURE_MEASUREMENT_NUMERIC (
    UUID UUID,
    SIG_DET_HYPO_GID UUID,
    MEASURED_CHANNEL_SEGMENT_UUID UUID,
    ANALYSIS_CHANNEL_SEGMENT_UUID UUID,
    FILTERID BIGINT,
    FILTER_USAGE VARCHAR(32),
    CHAN_CANONICAL_NAME VARCHAR(32),
    CHAN_EFFECTIVE_AT TIMESTAMP(6),
    MEASUREMENT_TYPE VARCHAR(27),
    MEASURED_VALUE REAL,
    UNITS VARCHAR(32),
    STANDARD_DEVIATION REAL,
    REFERENCE_TIME TIMESTAMP(6),
    SNR REAL,
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS FEATURE_PREDICTION_ARRIVAL_TIME (
    UUID UUID,
    LOCATION_BEHAVIOR_UUID UUID,
    CHAN_CANONICAL_NAME VARCHAR(32),
    CHAN_EFFECTIVE_AT TIMESTAMP(6),
    PHASE VARCHAR(8),
    PREDICTION_TYPE VARCHAR(27),
    ARRIVAL_TIME TIMESTAMP(6),
    TRAVEL_TIME REAL,
    STANDARD_DEVIATION REAL,
    EXTRAPOLATED VARCHAR(1),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS FEATURE_PREDICTION_COMPONENT (
    UUID UUID,
    FEATURE_PREDICTION_UUID UUID,
    PREDICTION_COMPONENT_TYPE VARCHAR(35),
    VALUE REAL,
    EXTRAPOLATED VARCHAR(1),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS FEATURE_PREDICTION_NUMERIC (
    UUID UUID,
    LOCATION_BEHAVIOR_UUID UUID,
    CHAN_CANONICAL_NAME VARCHAR(32),
    CHAN_EFFECTIVE_AT TIMESTAMP(6),
    PHASE VARCHAR(8),
    PREDICTION_TYPE VARCHAR(27),
    PREDICTED_VALUE REAL,
    UNITS VARCHAR(32),
    STANDARD_DEVIATION REAL,
    EXTRAPOLATED VARCHAR(1),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS INTERVAL (
    UUID UUID,
    INTERVAL_GID UUID,
    REMARK_GID UUID,
    STATUS VARCHAR(16),
    START_TIME TIMESTAMP(6),
    END_TIME TIMESTAMP(6),
    PROCESSING_START_TIME TIMESTAMP(6),
    PROCESSING_END_TIME TIMESTAMP(6),
    PERCENT_COMPLETED REAL,
    ACTIVE_ANALYST_IDS VARCHAR(256),
    RESERVED_ANALYST_ID VARCHAR(32),
    COMPLETED_ANALYST_ID VARCHAR(32),
    AUTHOR VARCHAR(32),
    STAGE VARCHAR(32),
    STAGE_MODE VARCHAR(32),
    SUB_STAGE VARCHAR(64),
    LAST_EXECUTED_STEP_NAME VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS LOCATION_BEHAVIOR (
    UUID UUID,
    LOCATION_SOLUTION_UUID UUID,
    SIG_DET_HYPO_GID UUID,
    FEATURE_MEASUREMENT_UUID UUID,
    FEATURE_PREDICTION_UUID UUID,
    VALUE_TYPE VARCHAR(12),
    DEFINING VARCHAR(1),
    REQUESTED_DEFINING VARCHAR(1),
    RESIDUAL REAL,
    WEIGHT REAL,
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS LOCATION_RESTRAINT (
    UUID UUID,
    LOCATION_SOLUTION_UUID UUID,
    DEPTH_RESTRAINT_TYPE VARCHAR(12),
    DEPTH_RESTRAINT_KM REAL,
    DEPTH_RESTRAINT_REASON VARCHAR(51),
    EPICENTER_RESTRAINT_TYPE VARCHAR(12),
    LATITUDE_RESTRAINT_DEG REAL,
    LONGITUDE_RESTRAINT_DEG REAL,
    TIME_RESTRAINT_TYPE VARCHAR(12),
    TIME_RESTRAINT TIMESTAMP(6),
    RESTRAINER VARCHAR(22),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS LOCATION_SOLUTION (
    UUID UUID,
    EVENT_HYPOTHESIS_UUID UUID,
    REMARK_GID UUID,
    LAT REAL,
    LON REAL,
    DEPTH REAL,
    TIME TIMESTAMP(6),
    GRN INTEGER,
    SRN INTEGER,
    ALGORITHM VARCHAR(15),
    AUTHOR VARCHAR(32),
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS LOCATION_UNCERTAINTY (
    UUID UUID,
    LOCATION_SOLUTION_UUID UUID,
    REMARK_GID UUID,
    XX REAL,
    YY REAL,
    ZZ REAL,
    TT REAL,
    XY REAL,
    XZ REAL,
    YZ REAL,
    TX REAL,
    TY REAL,
    TZ REAL,
    STD_DEV_TRAVEL_TIME_RESIDUALS REAL,
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS LOCATION_UNCERTAINTY_ELLIPSE (
    UUID UUID,
    LOCATION_UNCERTAINTY_UUID UUID,
    SCALING_FACTOR_TYPE VARCHAR(32),
    K_WEIGHT REAL,
    CONFIDENCE_LEVEL REAL,
    APRIORI_VARIANCE REAL,
    SEMI_MAJOR_AXIS_LENGTH_KM REAL,
    SEMI_MAJOR_AXIS_TREND_DEG REAL,
    SEMI_MINOR_AXIS_LENGTH_KM REAL,
    DEPTH_UNCERTAINTY_KM REAL,
    TIME_UNCERTAINTY REAL,
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS LOCATION_UNCERTAINTY_ELLIPSOID (
    UUID UUID,
    LOCATION_UNCERTAINTY_UUID UUID,
    SCALING_FACTOR_TYPE VARCHAR(32),
    K_WEIGHT REAL,
    CONFIDENCE_LEVEL REAL,
    APRIORI_VARIANCE REAL,
    SEMI_MAJOR_AXIS_LENGTH_KM REAL,
    SEMI_MAJOR_AXIS_TREND_DEG REAL,
    SEMI_MAJOR_AXIS_PLUNGE_DEG REAL,
    SEMI_INTERMEDIATE_AXIS_LENGTH_KM REAL,
    SEMI_INTERMEDIATE_AXIS_TREND_DEG REAL,
    SEMI_INTERMEDIATE_AXIS_PLUNGE_DEG REAL,
    SEMI_MINOR_AXIS_LENGTH_KM REAL,
    SEMI_MINOR_AXIS_TREND_KM REAL,
    SEMI_MINOR_AXIS_PLUNGE_KM REAL,
    TIME_UNCERTAINTY REAL,
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS NETWORK_MAGNITUDE_SOLUTION (
    UUID UUID,
    LOCATION_SOLUTION_UUID UUID,
    EVENT_HYPOTHESIS_UUID UUID,
    REMARK_GID UUID,
    MAGTYPE VARCHAR(6),
    MAGNITUDE REAL,
    UNCERTAINTY REAL,
    STATUS VARCHAR(32),
    AUTHOR VARCHAR(32),
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS PROCESSING_MASK (
    UUID UUID,
    PROCESSING_OPERATION VARCHAR(32),
    RAW_CHAN_CANONICAL_NAME VARCHAR(32),
    RAW_CHAN_EFFECTIVE_AT TIMESTAMP(6),
    START_TIME TIMESTAMP(6),
    END_TIME TIMESTAMP(6),
    EFFECTIVE_AT TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS PROCESSING_MASK_QC_SEGMENT_VERSION (
    UUID UUID,
    PROCESSING_MASK_UUID UUID,
    QC_SEGMENT_VERSION_UUID UUID,
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS QC_SEGMENT_VERSION (
    UUID UUID,
    QC_SEGMENT_GID UUID,
    CHAN_CANONICAL_NAME VARCHAR(32),
    CHAN_EFFECTIVE_AT TIMESTAMP(6),
    START_TIME TIMESTAMP(6),
    END_TIME TIMESTAMP(6),
    CATEGORY VARCHAR(32),
    TYPE VARCHAR(32),
    RATIONALE VARCHAR(32),
    REJECTED VARCHAR(1),
    AUTHOR VARCHAR(32),
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    EFFECTIVE_AT TIMESTAMP(6),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6),
    QCMASKID BIGINT
);

CREATE TABLE IF NOT EXISTS REMARK (
    UUID UUID,
    REMARK_GID UUID,
    REMARK VARCHAR(256),
    AUTHOR VARCHAR(32),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS SIGNAL_DETECTION_HYPOTHESIS (
    UUID UUID,
    PARENT_SIG_DET_HYPO_UUID UUID,
    SIG_DET_HYPO_GID UUID,
    REMARK_GID UUID,
    STA_NAME VARCHAR(6),
    STA_EFFECTIVE_AT TIMESTAMP(6),
    MONITORING_ORGANIZATION VARCHAR(32),
    DELETED VARCHAR(1),
    AUTHOR VARCHAR(32),
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS STAGE_METRICS (
    UUID UUID,
    INTERVAL_UUID UUID,
    INTERVAL_GID UUID,
    METRIC_NAME VARCHAR(32),
    METRIC_VALUE VARCHAR(32),
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS STATION_MAGNITUDE_SOLUTION (
    UUID UUID,
    FEATURE_MEASUREMENT_AMPLITUDE_UUID UUID,
    NETWORK_MAGNITUDE_SOLUTION_UUID UUID,
    REMARK_GID UUID,
    STA_NAME VARCHAR(6),
    STA_EFFECTIVE_AT TIMESTAMP(6),
    PHASE VARCHAR(8),
    DELTA REAL,
    MAGTYPE VARCHAR(6),
    MAGNITUDE REAL,
    UNCERTAINTY REAL,
    RESIDUAL REAL,
    WEIGHT REAL,
    DEFINING VARCHAR(1),
    REQUESTED_DEFINING VARCHAR(32),
    ATTENUATION_MODEL VARCHAR(32),
    MODEL_CORRECTION REAL,
    STATION_CORRECTION REAL,
    AUTHOR VARCHAR(32),
    STAGE VARCHAR(32),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS RESPONSE_TABLE (
    INID BIGINT,
    RSPTYPE VARCHAR(6),
    RESPONSE_FILE TEXT
);

CREATE TABLE IF NOT EXISTS STATION_CHANNEL (
    ID UUID,
    STA_NAME VARCHAR(6),
    STA_DESCRIPTION VARCHAR(50),
    STA_TYPE VARCHAR(19),
    STA_LAT REAL,
    STA_LON REAL,
    STA_ELEV REAL,
    CHAN_GRP_NAME VARCHAR(6),
    CHAN_GRP_DESCRIPTION VARCHAR(50),
    CHAN_GRP_TYPE VARCHAR(50),
    CHAN_GRP_LAT REAL,
    CHAN_GRP_LON REAL,
    CHAN_GRP_ELEV REAL,
    CHAN_GRP_NORTH_DISPLACEMENT REAL,
    CHAN_GRP_EAST_DISPLACEMENT REAL,
    CHAN_NAME VARCHAR(8),
    CHAN_CANONICAL_NAME VARCHAR(32),
    CHAN_DESCRIPTION VARCHAR(50),
    CHAN_DATA_TYPE VARCHAR(13),
    CHAN_LAT REAL,
    CHAN_LON REAL,
    CHAN_ELEV REAL,
    CHAN_EDEPTH REAL,
    CHAN_HANG REAL,
    CHAN_VANG REAL,
    CHAN_BAND_TYPE VARCHAR(39),
    CHAN_INSTRUMENT_TYPE VARCHAR(21),
    CHAN_ORIENTATION_CODE VARCHAR(1),
    CHAN_ORIENTATION_TYPE VARCHAR(12),
    CHAN_SAMPRATE REAL,
    CHAN_UNITS VARCHAR(22),
    CHANID BIGINT,
    RESPONSE_CAL_FACTOR REAL,
    RESPONSE_CAL_PERIOD REAL,
    RESPONSE_CAL_TIMESHIFT REAL,
    INID BIGINT,
    STA_EFFECTIVE_AT TIMESTAMP(6),
    STA_EFFECTIVE_UNTIL TIMESTAMP(6),
    STA_UPDATED_AT TIMESTAMP(6),
    CHAN_GRP_EFFECTIVE_AT TIMESTAMP(6),
    CHAN_GRP_EFFECTIVE_UNTIL TIMESTAMP(6),
    CHAN_GRP_UPDATED_AT TIMESTAMP(6),
    CHAN_EFFECTIVE_AT TIMESTAMP(6),
    CHAN_EFFECTIVE_UNTIL TIMESTAMP(6),
    CHAN_UPDATED_AT TIMESTAMP(6),
    RESPONSE_EFFECTIVE_AT TIMESTAMP(6),
    RESPONSE_EFFECTIVE_UNTIL TIMESTAMP(6),
    RESPONSE_UPDATED_AT TIMESTAMP(6),
    ISCURRENT VARCHAR(1),
    MODDATE TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS STATION_GROUP_VERSION (
    STA_GRP_NAME VARCHAR(8),
    STA_GRP_DESCRIPTION VARCHAR(120),
    STA_GRP_EFFECTIVE_AT TIMESTAMP(6),
    STA_GRP_EFFECTIVE_UNTIL TIMESTAMP(6),
    STA_GRP_UPDATED_AT TIMESTAMP(6),
    LDDATE TIMESTAMP(6)
);
